{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 8,
  "lineage": "19dc0643-5080-8b3a-6eef-affe87ea868d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911777262535:vpc/vpc-0398eac2519a7c4d9",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-067aece12f39287e3",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-07e32861fd84dcbf3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0398eac2519a7c4d9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0db207ebd3b4d52d2",
            "owner_id": "911777262535",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "web01",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:911777262535:instance/i-0b05eea0d51b5e670",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b05eea0d51b5e670",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "web-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0abf2e301fd654bc1"
              }
            ],
            "primary_network_interface_id": "eni-0abf2e301fd654bc1",
            "private_dns": "ip-172-31-28-219.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.219",
            "public_dns": "ec2-107-20-75-22.compute-1.amazonaws.com",
            "public_ip": "107.20.75.22",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ea8945a1ef0fbdd3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "webs-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08026ae66c1dca7aa",
            "tags": {
              "Name": "web01"
            },
            "tags_all": {
              "Name": "web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ef291079b043e1d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911777262535",
            "id": "i-0b05eea0d51b5e670",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.web_keypair",
            "aws_security_group.webs_sg",
            "data.aws_vpc.default"
          ]
        },
        {
          "index_key": "web02",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0b6c6ebed2801a5cb",
            "arn": "arn:aws:ec2:us-east-1:911777262535:instance/i-0dd429e90f0ee17ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd429e90f0ee17ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "web-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05722af994f003ba6"
              }
            ],
            "primary_network_interface_id": "eni-05722af994f003ba6",
            "private_dns": "ip-172-31-20-70.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.20.70",
            "public_dns": "ec2-54-221-183-117.compute-1.amazonaws.com",
            "public_ip": "54.221.183.117",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04a9d1968be449826",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "webs-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08026ae66c1dca7aa",
            "tags": {
              "Name": "web02"
            },
            "tags_all": {
              "Name": "web02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05ef291079b043e1d"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911777262535",
            "id": "i-0dd429e90f0ee17ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.web_keypair",
            "aws_security_group.webs_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911777262535:security-group/sg-05ef291079b043e1d",
            "description": "webs-sg for both ec2s",
            "egress": [],
            "id": "sg-05ef291079b043e1d",
            "ingress": [],
            "name": "webs-sg",
            "name_prefix": "",
            "owner_id": "911777262535",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "webs-sg"
            },
            "tags_all": {
              "Name": "webs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0398eac2519a7c4d9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911777262535",
            "id": "sg-05ef291079b043e1d",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911777262535:security-group-rule/sgr-062ef5e562c690beb",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-062ef5e562c690beb",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05ef291079b043e1d",
            "security_group_rule_id": "sgr-062ef5e562c690beb",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911777262535",
            "id": "sgr-062ef5e562c690beb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.webs_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911777262535:security-group-rule/sgr-0d5fbc39d28479001",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0d5fbc39d28479001",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05ef291079b043e1d",
            "security_group_rule_id": "sgr-0d5fbc39d28479001",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911777262535",
            "id": "sgr-0d5fbc39d28479001",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.webs_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:911777262535:security-group-rule/sgr-07e318b9073e23b99",
            "cidr_ipv4": "143.105.152.210/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-07e318b9073e23b99",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05ef291079b043e1d",
            "security_group_rule_id": "sgr-07e318b9073e23b99",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "911777262535",
            "id": "sgr-07e318b9073e23b99",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.webs_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}